all mail functions done

--- a/career-thank-you.html
+++ b/career-thank-you.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joyous Elite Business Advisory - Adding pace to your business | Careers</title>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Joyous Elite Business Advisory - Adding pace to your business | Thank You</title>
 
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon.png" type="image/x-icon">
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Round" rel="stylesheet">
@@ -18,6 +17,7 @@
     <link rel="stylesheet" href="/css/responsive.css">
 </head>
 <body>
+
     <!-- top header start -->
     <header class="main-header" id="myHeader">
         <!-- Topbar start -->
@@ -33,7 +33,7 @@
                                 </li>
                                 <li>
                                     <span class="material-icons-round"> email </span>
-                                    <a href="mailto:careers@joyouselite.in">careers@joyouselite.in</a>
+                                    <a href="mailto:B.berlin17@gmail.com">B.berlin17@gmail.com</a>
                                 </li>
                             </ul>
                         </div>
@@ -75,7 +75,7 @@
                                         <a class="nav-link" href="contact.html">Contact us</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="careers.html">Careers</a>
+                                        <a class="nav-link" href="careers.html">Careers</a>
                                     </li>
                                 </ul>
                             </div>
@@ -90,8 +90,8 @@
 
     <!-- top banner start -->
     <section class="inner-banner">
-        <img src="/images/career-banner.jpg" alt="career banner">
-        <div class="slide-content">
+        <img src="/images/tyc-banner.jpg" alt="thank you banner">
+        <!-- <div class="slide-content">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
@@ -100,93 +100,25 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
     <!-- top banner end -->
-
-     <!-- about start -->
-    <section class="service-info section-sapce">
+	
+    <div class="thank-you">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-xl-10">
-                    <div class="default-content">
-                        <h2>Working At JEBA</h2>
-                        <p>If you want to advance your career with a leader, consider JEBA. We stand among the worlds foremost corporations providing Accounting Outsourcing and Business Advisory solutions. By providing these services among a vast range of Clientele, We have enhanced Clients businesses around world specially in New Zealand. We focus on providing the best quality services to Clients. We figure out Client's business loopholes. To address them, we have brought many highly effective policies and plans to find and fix them out.</p>
-                    </div>
-                    <div class="list-boxes">
-                        <p>Be part of a winning company.</p>
-                        <p>Thrive on our Performance Culture.</p>
-                        <p>Enjoy our inspiring Work Environment.</p>
-                    </div>
+                <div class="col-md-8 col-lg-6 text-center">
+                    <!-- <span class="material-icons-round"> task_alt </span> -->
+                    <img src="/images/ty-icon.png" alt="">
+                    <h3>Thank you for applying!</h3>
+                    <p>We are always looking for fresh new idea and telent, so we're interested in learning how you may add your strengths to our growing team. We'll review your application and contact you for an interview within two weeks if your skills are a match.</p>
+                    <a href="./index.html" class="btn btn-info">Go Home</a>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- about end -->
+    </div>
 
-    <!-- contact form start -->
-    <section class="home-services section-sapce pt-0">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-sm-10 col-lg-8 col-xl-6 text-center">
-                    <div class="section-heading">
-                        <h2 class="sec-heading">TEAMWORK divides the task and multiplies the success</h2>
-                        <p>Enter the details below and kindly drop your resume.<br> We will reach you with any job openings.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">                
-                <div class="col-md-12 col-xl-8">
-                    <form method="post" action="" id="careerForm" class="contact-form">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="form-group mb-4">
-                                    <label for="">Full Name <sup>*</sup></label>
-                                    <input type="text" name="fullName" id="fullName" class="form-control req">
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group mb-4">
-                                    <label for="">Qualification <sup>*</sup></label>
-                                    <input type="text" name="qualification" id="qualification" class="form-control req">
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group mb-4">
-                                    <label for="">Current Employer <sup>*</sup></label>
-                                    <input type="text" name="employer" id="employer" class="form-control req">
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group mb-4">
-                                    <label for="">Current Designation <sup>*</sup></label>
-                                    <input type="text" name="designation" id="designation" class="form-control req">
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-group mb-4">
-                                    <label for="">Experience <sup>*</sup></label>
-                                    <input type="text" name="experience" id="experience" class="form-control req">
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-group mb-4">
-                                    <label for="formFile" class="form-label">Drop your Resume here <sup>*</sup></label>
-                                    <input class="d-block" type="file" name="resumeFile" id="formFile">
-                                </div>
-                            </div>
-                            <div class="col text-center">
-                                <button type="button" class="btn btn-info submit-btn" onclick="submitResume()">Submit</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- contact form end -->
-
-    <!-- Footer start -->
+<!-- Footer start -->
     <footer class="main-footer">
         <div class="container">
             <div class="row">
@@ -216,7 +148,7 @@
                         </div>
                         <div class="phone">
                             <span class="material-icons-round"> email </span>
-                            <a href="mailto:info@joyouselite.in">info@joyouselite.in</a>
+                            <a href="mailto:B.berlin17@gmail.com">B.berlin17@gmail.com</a>
                         </div>
                     </div>
                 </div>
@@ -248,10 +180,10 @@
                     <div class="footer-item">
                         <h4>Follow Us</h4>
                         <div class="social-links">
-                            <a target="_blank" data-bs-toggle="tooltip" data-bs-title="Linkedin" href="https://www.linkedin.com/company/jeba-joyous-elite-business-advisory/">
+                            <a target="_blank" data-bs-toggle="tooltip" data-bs-title="Linkedin" href="https://www.linkedin.com/">
                                 <span class="jeba-two-icon-linkedin"></span>
                             </a>
-                            <a target="_blank" data-bs-toggle="tooltip" data-bs-title="Instagram" href="https://www.instagram.com/">
+                            <a target="_blank" data-bs-toggle="tooltip" data-bs-title="Instagram" href="https://www.linkedin.com/">
                                 <span class="jeba-two-icon-instagram"></span>
                             </a>
                         </div>
