--- a/services.html
+++ b/services.html
@@ -236,14 +236,17 @@
                     <div class="col-lg-8 col-xl-7 text-center">
                         <h3 class="wow animated fadeInDown">You can simply request a callback from us:</h3>
                     </div>
-                    <div class="col-lg-12 col-xl-7">
+                    <div class="col-lg-12">
                         <form method="post" class="row justify-content-center" action="">
                             <div class="row justify-content-center">
-                                <div class="col-sm-6 mb-4">
-                                    <input type="text" id="name" name="name" class="form-control req" placeholder="Name" aria-label="Name">
+                                <div class="col-sm-8 col-md-4 mb-4">
+                                    <input type="text" id="name" name="name" class="form-control req" placeholder="Name">
                                 </div>
-                                <div class="col-sm-6 mb-4">
-                                    <input type="text" id="phoneNumber" name="phoneNumber" class="form-control onlyNum req" placeholder="Phone Number" aria-label="Phone Number">
+                                <div class="col-sm-8 col-md-4 mb-4">
+                                    <input type="text" id="phoneNumber" name="phoneNumber" class="form-control onlyNum req" placeholder="Phone Number">
+                                </div>                                
+                                <div class="col-sm-8 col-md-4 mb-4">
+                                    <input type="email" id="email" name="email" class="form-control req email" placeholder="Email Address">
                                 </div>
                             </div>
                             <div class="row justify-content-center">
