--- a/thank-you.html
+++ b/thank-you.html
@@ -17,19 +17,203 @@
     <link rel="stylesheet" href="/css/responsive.css">
 </head>
 <body>
+
+    <!-- top header start -->
+    <header class="main-header" id="myHeader">
+        <!-- Topbar start -->
+        <div class="topbar">
+            <div class="container">
+                <div class="row justify-content-end">
+                    <div class="col-lg-6">
+                        <div class="toplink">
+                            <ul>
+                                <li>
+                                    <span class="material-icons-round"> call </span>
+                                    <a href="tel:+91-988-871-0208">+91-988-871-0208</a>
+                                </li>
+                                <li>
+                                    <span class="material-icons-round"> email </span>
+                                    <a href="mailto:B.berlin17@gmail.com">B.berlin17@gmail.com</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Topbar end -->
+
+        <!-- Main nav start -->
+        <div class="main-nav">
+            <div class="container">
+                <div class="row">
+                    <div class="col-8 col-md-4">
+                        <div class="logo">
+                            <a href="index.html">
+                                <img src="images/logo.png" alt="Joyous logo">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-8">
+                        <nav class="navbar navbar-expand-lg">
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span></span> <span></span> <span></span> <span></span>
+                            </button>
+
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="index.html">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="about.html">About us</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="services.html">Our Services</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="contact.html">Contact us</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="careers.html">Careers</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Main nav end -->
+    </header>
+    <!-- top header end -->
+
+    <!-- top banner start -->
+    <section class="inner-banner">
+        <img src="/images/ty-banner.jpg" alt="thank you banner">
+        <!-- <div class="slide-content">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 col-xl-6 text-center">
+                        <div class="slide-head wow animated fadeInDown">Careers</div>
+                        <div class="bottom-head wow animated fadeInUp">Let's work together</div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+    </section>
+    <!-- top banner end -->
 	
     <div class="thank-you">
         <div class="container">
-            <div class="row align-items-center justify-content-center h-100">
+            <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6 text-center">
-                    <span class="material-icons-round"> task_alt </span>
-                    <h3>Thank You</h3>
-                    <p>Thanks a bunch for filling that out. It means a lot to us, just like you do! We really appreciate you giving us a moment of your time today. Thanks for being you.</p>
-                    <a href="./index.html" class="btn btn-info">Go to Homepage</a>
+                    <!-- <span class="material-icons-round"> task_alt </span> -->
+                    <img src="/images/ty-icon.png" alt="">
+                    <h3>Thanks for submitting!</h3>
+                    <p>Thanks a bunch for filling that out. It means a lot to us, just like you do! We really appreciate you giving us a moment of your time today. We will get back to you in 1-2 business days.</p>
+                    <a href="./index.html" class="btn btn-info">Go Home</a>
                 </div>
             </div>
         </div>
     </div>
 
+<!-- Footer start -->
+    <footer class="main-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-3">
+                    <div class="footer-item img-item">
+                        <div class="footer-logo">
+                            <a href="/index.html">
+                                <img src="/images/logo-white.png" alt="logo">
+                            </a>
+                        </div>
+                        <div class="certificate"><img src="/images/xero-full.png" alt="logo"></div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-xl-4">
+                    <div class="footer-item">
+                        <h4>Contact</h4>
+                        <div class="address">
+                            <span class="material-icons-round"> room </span>
+                            <address>
+                                <h5>Joyous Elite Business Advisory</h5>
+                                <p>Ward No 15, Kurali,<br> Mohali (Punjab), India – 140103</p>
+                            </address>
+                        </div>
+                        <div class="phone">
+                            <span class="material-icons-round"> phone </span>
+                            <a href="tel:+91-988-871-0208">+91-988-871-0208</a>
+                        </div>
+                        <div class="phone">
+                            <span class="material-icons-round"> email </span>
+                            <a href="mailto:B.berlin17@gmail.com">B.berlin17@gmail.com</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-3 col-xl-2">
+                    <div class="footer-item">
+                        <h4>Quick Links</h4>
+                        <ul>
+                            <li>
+                                <a href="/index.html">Home</a>
+                            </li>
+                            <li>
+                                <a href="about.html">About us</a>
+                            </li>
+                            <li>
+                                <a href="services.html">Our Services</a>
+                            </li>
+                            <li>
+                                <a href="contact.html">Contact us</a>
+                            </li>
+                            <li>
+                                <a href="careers.html">Careers</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-3 col-xl-2">
+                    <div class="footer-item">
+                        <h4>Follow Us</h4>
+                        <div class="social-links">
+                            <a target="_blank" data-bs-toggle="tooltip" data-bs-title="Linkedin" href="https://www.linkedin.com/">
+                                <span class="jeba-two-icon-linkedin"></span>
+                            </a>
+                            <a target="_blank" data-bs-toggle="tooltip" data-bs-title="Instagram" href="https://www.linkedin.com/">
+                                <span class="jeba-two-icon-instagram"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="copyright">
+                    <p>&copy; Joyous Elite Business Advisory 2023. All rights reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <a id="back-top" href="javascript:;" onclick='window.scrollTo({top: 0, behavior: "smooth"});'><span class="material-icons-round"> arrow_upward </span></a>
+    <!-- Footer end -->
+
+    <!-- scripts -->
+    <script src="/js/jquery-3.6.3.min.js"></script>
+    <script src="/js/bootstrap.bundle.js"></script>
+    <script src="/js/owl.carousel.min.js"></script>
+    <script src="/js/wow.min.js"></script>
+    <script src="/js/custom.js"></script>
+
+    <script>
+        $(function(){
+            let search = window.location.search
+            if(search == '?cu'){
+                $('.inner-banner img').attr('src', '/images/tycu-banner.jpg')
+            }
+        });
+    </script>
 </body>
 </html>
