final changes done

--- a/career-thank-you.html
+++ b/career-thank-you.html
@@ -19,7 +19,7 @@
 <body>
 
     <!-- top header start -->
-    <header class="main-header" id="myHeader">
+    <header class="main-header ty-header" id="myHeader">
         <!-- Topbar start -->
         <div class="topbar">
             <div class="container">
@@ -33,7 +33,7 @@
                                 </li>
                                 <li>
                                     <span class="material-icons-round"> email </span>
-                                    <a href="mailto:B.berlin17@gmail.com">B.berlin17@gmail.com</a>
+                                    <a href="mailto:info@joyouselite.in">info@joyouselite.in</a>
                                 </li>
                             </ul>
                         </div>
@@ -89,18 +89,8 @@
     <!-- top header end -->
 
     <!-- top banner start -->
-    <section class="inner-banner">
+    <section class="inner-banner ty-banner">
         <img src="/images/tyc-banner.jpg" alt="thank you banner">
-        <!-- <div class="slide-content">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8 col-xl-6 text-center">
-                        <div class="slide-head wow animated fadeInDown">Careers</div>
-                        <div class="bottom-head wow animated fadeInUp">Let's work together</div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
     </section>
     <!-- top banner end -->
 	
@@ -148,7 +138,7 @@
                         </div>
                         <div class="phone">
                             <span class="material-icons-round"> email </span>
-                            <a href="mailto:B.berlin17@gmail.com">B.berlin17@gmail.com</a>
+                            <a href="mailto:info@joyouselite.in">info@joyouselite.in</a>
                         </div>
                     </div>
                 </div>
