--- a/careers.html
+++ b/careers.html
@@ -147,6 +147,18 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group mb-4">
+                                    <label for="">Email <sup>*</sup></label>
+                                    <input type="email" name="email" id="email" class="form-control email req">
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-group mb-4">
+                                    <label for="">Phone Number <sup>*</sup></label>
+                                    <input type="text" name="phoneNumber" id="phoneNumber" class="form-control onlyNum req">
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-group mb-4">
                                     <label for="">Qualification <sup>*</sup></label>
                                     <input type="text" name="qualification" id="qualification" class="form-control req">
                                 </div>
