--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                                 </li>
                                 <li>
                                     <span class="material-icons-round"> email </span>
-                                    <a href="mailto:B.berlin17@gmail.com">B.berlin17@gmail.com</a>
+                                    <a href="mailto:info@joyouselite.in">info@joyouselite.in</a>
                                 </li>
                             </ul>
                         </div>
@@ -269,7 +269,7 @@
                         </div>
                         <div class="phone">
                             <span class="material-icons-round"> email </span>
-                            <a href="mailto:B.berlin17@gmail.com">B.berlin17@gmail.com</a>
+                            <a href="mailto:info@joyouselite.in">info@joyouselite.in</a>
                         </div>
                     </div>
                 </div>
