--- a/career-thank-you.html
+++ b/career-thank-you.html
@@ -17,178 +17,22 @@
     <link rel="stylesheet" href="/css/responsive.css">
 </head>
 <body>
-
-    <!-- top header start -->
-    <header class="main-header ty-header" id="myHeader">
-        <!-- Topbar start -->
-        <div class="topbar">
-            <div class="container">
-                <div class="row justify-content-end">
-                    <div class="col-lg-6">
-                        <div class="toplink">
-                            <ul>
-                                <li>
-                                    <span class="material-icons-round"> call </span>
-                                    <a href="tel:+91-988-871-0208">+91-988-871-0208</a>
-                                </li>
-                                <li>
-                                    <span class="material-icons-round"> email </span>
-                                    <a href="mailto:info@joyouselite.in">info@joyouselite.in</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Topbar end -->
-
-        <!-- Main nav start -->
-        <div class="main-nav">
-            <div class="container">
-                <div class="row">
-                    <div class="col-8 col-md-4">
-                        <div class="logo">
-                            <a href="index.html">
-                                <img src="images/logo.png" alt="Joyous logo">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-4 col-md-8">
-                        <nav class="navbar navbar-expand-lg">
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                <span></span> <span></span> <span></span> <span></span>
-                            </button>
-
-                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                <ul class="navbar-nav">
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="about.html">About us</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="services.html">Our Services</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="contact.html">Contact us</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="careers.html">Careers</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Main nav end -->
-    </header>
-    <!-- top header end -->
-
-    <!-- top banner start -->
-    <section class="inner-banner ty-banner">
-        <img src="/images/tyc-banner.jpg" alt="thank you banner">
-    </section>
-    <!-- top banner end -->
 	
-    <div class="thank-you">
+    <div class="thank-you" style="background-image: url('/images/tyc-banner.jpg');">
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8 col-lg-6 text-center">
+            <div class="row align-items-end justify-content-center h-100">
+                <div class="col-md-8 col-lg-7 text-center">
                     <!-- <span class="material-icons-round"> task_alt </span> -->
-                    <img src="/images/ty-icon.png" alt="">
+                    <img src="/images/logo-white.png" alt="">
                     <h3>Thank you for applying!</h3>
-                    <p>We are always looking for fresh new idea and telent, so we're interested in learning how you may add your strengths to our growing team. We'll review your application and contact you for an interview within two weeks if your skills are a match.</p>
+                    <p>We are always looking for fresh new idea and talent, so we're interested in learning how you may add your strengths to our growing team. We'll review your application and contact you for an interview within two weeks if your skills are a match.</p>
                     <a href="./index.html" class="btn btn-info">Go Home</a>
                 </div>
             </div>
         </div>
     </div>
 
-<!-- Footer start -->
-    <footer class="main-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-3">
-                    <div class="footer-item img-item">
-                        <div class="footer-logo">
-                            <a href="/index.html">
-                                <img src="/images/logo-white.png" alt="logo">
-                            </a>
-                        </div>
-                        <div class="certificate"><img src="/images/xero-full.png" alt="logo"></div>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-6 col-xl-4">
-                    <div class="footer-item">
-                        <h4>Contact</h4>
-                        <div class="address">
-                            <span class="material-icons-round"> room </span>
-                            <address>
-                                <h5>Joyous Elite Business Advisory</h5>
-                                <p>Ward No 15, Kurali,<br> Mohali (Punjab), India – 140103</p>
-                            </address>
-                        </div>
-                        <div class="phone">
-                            <span class="material-icons-round"> phone </span>
-                            <a href="tel:+91-988-871-0208">+91-988-871-0208</a>
-                        </div>
-                        <div class="phone">
-                            <span class="material-icons-round"> email </span>
-                            <a href="mailto:info@joyouselite.in">info@joyouselite.in</a>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col-sm-6 col-md-3 col-xl-2">
-                    <div class="footer-item">
-                        <h4>Quick Links</h4>
-                        <ul>
-                            <li>
-                                <a href="/index.html">Home</a>
-                            </li>
-                            <li>
-                                <a href="about.html">About us</a>
-                            </li>
-                            <li>
-                                <a href="services.html">Our Services</a>
-                            </li>
-                            <li>
-                                <a href="contact.html">Contact us</a>
-                            </li>
-                            <li>
-                                <a href="careers.html">Careers</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-md-3 col-xl-2">
-                    <div class="footer-item">
-                        <h4>Follow Us</h4>
-                        <div class="social-links">
-                            <a target="_blank" data-bs-toggle="tooltip" data-bs-title="Linkedin" href="https://www.linkedin.com/">
-                                <span class="jeba-two-icon-linkedin"></span>
-                            </a>
-                            <a target="_blank" data-bs-toggle="tooltip" data-bs-title="Instagram" href="https://www.linkedin.com/">
-                                <span class="jeba-two-icon-instagram"></span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="copyright">
-                    <p>&copy; Joyous Elite Business Advisory 2023. All rights reserved</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <a id="back-top" href="javascript:;" onclick='window.scrollTo({top: 0, behavior: "smooth"});'><span class="material-icons-round"> arrow_upward </span></a>
-    <!-- Footer end -->
 
     <!-- scripts -->
     <script src="/js/jquery-3.6.3.min.js"></script>
